[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/TNT.gd" type="Script" id=1]
[ext_resource path="res://Texturs/kek34.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 376, 212, 16, 22 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 261, 355, 24, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 304, 353, 31, 30 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 354, 352, 28, 30 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 359, 405, 19, 20 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 376, 212, 16, 22 )

[sub_resource type="Animation" id=9]
resource_name = "Boom_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Boom_area/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 4.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Icon:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "Down_move"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:Vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 64.5 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Boom_area/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 1.5 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Left_move"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:Vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64.5, 0 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:Vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Right_move"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:Vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -64.5, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "Up_move"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:Vector")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -64.5 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 8.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 8.5 )

[sub_resource type="CircleShape2D" id=7]
radius = 56.5685

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 24, 24 )

[node name="TNT" type="KinematicBody2D"]
input_pickable = true
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0.524573, 0 )
scale = Vector2( 4, 4.5 )
texture = SubResource( 13 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Boom_animation = SubResource( 9 )
anims/Down_move = SubResource( 21 )
anims/Idle = SubResource( 10 )
anims/Left_move = SubResource( 19 )
anims/RESET = SubResource( 20 )
anims/Right_move = SubResource( 22 )
anims/Up_move = SubResource( 23 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -14, 0 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right"]
position = Vector2( 13.5, 0 )
shape = SubResource( 3 )

[node name="Up" type="Area2D" parent="."]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Up"]
position = Vector2( 0, -15.5 )
shape = SubResource( 4 )

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Down"]
position = Vector2( 0, 15.5 )
shape = SubResource( 5 )

[node name="Boom_area" type="Area2D" parent="." groups=["Boom"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boom_area"]
scale = Vector2( 0.96, 1 )
shape = SubResource( 7 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 8 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
